Changes
=======

2.2.0 (unreleased)
------------------

Improved performance of the Geometry -> float scalar operations: `area`, `length`,
`minimum_clearance`, `x`, `y`, `z` and `m`. Benchmarks showed a change of call duration
from 2.6 microseconds to 0.2 microseconds (on the `Point.x` attribute).

Added `transform_coordseq`, which applies a transformation function per coordinate sequence
in a more performant way than `shapely.ops.transform` does. `shapely.ops.transform` is now deprecated.

2.1.2 (2025-09-24)
------------------

Wheels are available for Python 3.14 (and still include GEOS 3.13.1).


2.1.1 (2025-05-19)
------------------

Bug fixes:

- Fix performance degradation calling shapely functions (caused by deprecation
  of certain positional arguments) (#2283).
- Fix crash caused by `from_ragged_array()` (#2291).
- Fix compilation error building with recent LLVM toolchain (#2293).


2.1.0 (2025-04-03)
------------------

Shapely 2.1.0 is a feature release with various new functions,
improvements and bug fixes. Highlights include initial support for geometries
with M or ZM values, functionality for coverage validation and
simplification, and a set of new top-level functions.

Shapely supports Python >= 3.10, and binary wheels on PyPI include GEOS 3.13.1
and are now also provided for musllinux (Alpine) x86_64 platforms.

For a full changelog, see
https://shapely.readthedocs.io/en/latest/release/2.x.html#version-2-1-0


2.0.7 (2025-01-30)
------------------

Bug fixes:

- Fix compilation error on certain Linux platforms, such as Alpine (#1945).
- Fixes crash when reading nonlinear geometry types (CircularString,
  CompoundCurve, MultiCurve, CurvePolygon, MultiSurface) from WKB/WKT with
  GEOS >= 3.13; these types are not yet supported in Shapely and now raise a
  ``NotImplementedError`` (#2160)
- Fix the ``project`` method to return a Python float (#2093).

2.0.6 (2024-08-19)
------------------

Bug fixes:

- Fix compatibility with NumPy 2.1.0 (#2099).
